--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ android {
 
 dependencies {
 
+    implementation("androidx.paging:paging-runtime:3.1.1")
+
     implementation 'com.airbnb.android:lottie:6.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
